<resources>
    <string name="app_name">EpicalFootball</string>
    <string name="action_button_text">SHOOT</string>
    <string name="balls_text">Balls</string>
    <string name="goals_text">Goals</string>
    <string name="defaultValue_text">0</string>
    <string name="minus_text">-</string>
    <string name="plus_text">+</string>
    <string name="title_text">EPICAL FOOTBALL</string>
    <string name="start_game_text">START GAME</string>
    <string name="reach">Reach</string>
    <string name="acceleration">Acceleration</string>
    <string name="speed">Speed</string>
    <string name="long_shots">Long Shots</string>
    <string name="finishing">Finishing</string>
    <string name="accuracy">Accuracy</string>
    <string name="shot_power">Shot Power</string>
    <string name="dribbling">Dribbling</string>
    <string name="ball_control">Ball Control</string>
    <string name="go_to_menu_text">TO MENU</string>
    <string name="goalkeeper_button_text">Goalkeeper</string>
    <string name="player_button_text">Player</string>
    <string name="agility">Agility</string>
    <string name="reflexes">Reflexes</string>
    <string name="ball_handling">Ball Handling</string>
    <string name="reaction_saves">Reaction Saves</string>
    <string name="intelligence">Intelligence</string>
</resources>